indsat alle TouristGuide Filer

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>testCI</artifactId>
+    <artifactId>TouristGuideDel3</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>testCI</name>
     <description>testCI</description>
